--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and Release
+name: Build and Release to GCR
 
 on:
   push:
@@ -20,15 +20,3 @@ jobs:
 
       - name: Build with Gradle
         run: ./gradlew build
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build and push Docker image
-        run: |
-          docker build -t fial-api:latest .
-          docker tag fial-api:latest ${{ secrets.DOCKERHUB_USERNAME }}/fial-api:latest
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/fial-api:latest
