--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,42 @@
-# Compiled class file
+# Compiled class files
 *.class
 
-# Log file
+# Log files
 *.log
 
-# BlueJ files
-*.ctxt
+# Directory for compiled classes
+/target/
+/bin/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# IntelliJ IDEA files
+.idea/
+*.iml
+*.iws
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# Eclipse files
+*.project
+.classpath
+.settings/
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# VS Code files
+.vscode/
+
+# Mac .DS_Store files
+.DS_Store
+
+# Gradle files
+.gradle/
+build/
+out/
+!gradle-wrapper.jar
+
+# Gradle Wrapper executable
+gradlew
+gradlew.bat
+
+# Docker files
+*.env
+
+# Ignore potential secret files
+secrets.yml
+secrets.properties
