--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,41 @@
-name: Build and Release to GCR
+name: Build and Push to Artifact Registry
 
 on:
   push:
     branches:
-      - main
+      - '*'
 
 jobs:
-  build_and_release:
+  build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up JDK 17
+      - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
-          java-version: 17
+          java-version: 11
 
       - name: Build with Gradle
         run: ./gradlew build
-        
+
+  release:
+    if: github.ref == 'refs/heads/main'
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v1'
+        with:
+          credentials_json: '${{ secrets.GCP_SA_KEY }}'
+          project_id: '${{ secrets.GCP_PROJECT_ID }}'
+  
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v1'
+  
+      - name: 'Use gcloud CLI'
+        run: 'gcloud info'
