--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
         run: 'gcloud info'
 
       - name: Configure Docker for GCP Artifact Registry
-        run: gcloud beta artifacts docker config use-defaults
+        run: gcloud auth configure-docker -q
 
       - name: Build Docker image
         run: docker build -t $GCP_LOCATION-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_REPOSITORY }}/fail-api:latest .
